2002-01-08  Martin Vermeer  <martin.vermeer@hut.fi>

	* FuncStatus.[Ch]: new files. This is a rewrite as a proper class
	of the func_satus stuff. Edited and massaged in various ways by
	JMarc.  

	* lyxfunc.C (getStatus): use FuncStatus

2002-01-08  Juergen Vigna  <jug@sad.it>

	* text.C (nextBreakPoint): use function Inset::isChar().

	* paragraph.C (TeXOnePar): use function
	Inset::forceDefaultParagraphs.

	* buffer.C (latexParagraphs): use function
	Inset::forceDefaultParagraphs.

2002-01-07  Angus Leeming  <a.leeming@ic.ac.uk>

	* lyx_gui.C (init): set the style of the menu popups to
	FL_BOLD_STYLE, thereby fixing bugzilla bug #32.

2002-01-07  Juergen Vigna  <jug@sad.it>

	* text.C (setHeightOfRow): small fix
	(prepareToPrint): don't look at alignment if we don't have the place
	for doing it.

2002-01-07  Angus Leeming  <a.leeming@ic.ac.uk>

	* box.C: New file. Move the Box methods and functions out of box.h,
	following Lars' suggestion.

2002-01-07  Angus Leeming  <a.leeming@ic.ac.uk>

	* box.h: #include "support/LOstream.h", needed for inlined function.

	* lyxtextclass.C:
	* lyxtextclasslist.C: added some using std declarations.

2002-01-06  John Levon  <moz@compsoc.man.ac.uk>

	* box.h: make signed dimensions to allow insets wider than
	  the screen (bug #162)

	* BufferView_pimpl.C: add some insetHit debug
 
2002-01-05  John Levon  <moz@compsoc.man.ac.uk>

	* vc-backend.C: add FIXME
 
2002-01-03  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* lyxfunc.C (getStatus): enable code for showing math font status
	in toolbar/menu.

2002-01-07  Juergen Vigna  <jug@sad.it>

	* text.C (nextBreakPoint): removed debug output not needed anymore.

2002-01-06  Juergen Vigna  <jug@sad.it>

	* text.C (nextBreakPoint): fixed up this function we had this bug
	since ever but now hopefully we break row better.
	(insertChar): we have to check if an inset is the next char as it
	could now happen that a large inset is causing a break.

2002-01-05  Juergen Vigna  <jug@sad.it>
